[formatted gallery and made client avatars circular]

--- a/index.html
+++ b/index.html
@@ -18,20 +18,23 @@
 
 <body>
   <header>
-    <div class="top-bar-logo-nav">
-      <img src="images/logo.svg" alt="sunnyside" class="logo-img">
-      <nav>
-        <ul>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Services</a></li>
-          <li><a href="#">Projects</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
-      </nav>
-    </div>
-    <div class="main-message-arrow">
-      <h1 class="center-main-message">We are creatives</h1>
-      <img src="images/icon-arrow-down.svg" alt="arrow-down" class="arrow-down">
+    <div class="header-content-box">
+      <img src="/images/desktop/image-header.jpg" alt="orange-picture-header" class="header-background">
+      <div class="top-bar-logo-nav">
+        <img src="images/logo.svg" alt="sunnyside" class="logo-img">
+        <nav class="navigation-place-right">
+          <ul>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">Projects</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </nav>
+        <div class="main-message-arrow">
+          <h1 class="center-main-message">We are creatives</h1>
+          <img src="images/icon-arrow-down.svg" alt="arrow-down" class="arrow-down">
+        </div>
+      </div>
     </div>
     </header>
 <div class="brand-transform-text">
@@ -83,7 +86,7 @@
 
 <div class="wide-bottom-container">
   <div class="wide-center-inner">
-    <h1 class="heading">
+    <h1 class="client-heading">
       client testimonials
     </h1>
       <div class="client">
