--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <link rel="stylesheet" type="text/css" href="./css/styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Barlow:wght@600&family=Fraunces:wght@700;900&display=swap" rel="stylesheet">
   
   <title>Frontend Mentor | Sunnyside agency landing page</title>
 
@@ -17,27 +20,34 @@
 </head>
 
 <body>
-  <header>
-    <div class="header-content-box">
-      <img src="/images/desktop/image-header.jpg" alt="orange-picture-header" class="header-background">
-      <div class="top-bar-logo-nav">
-        <img src="images/logo.svg" alt="sunnyside" class="logo-img">
-        <nav class="navigation-place-right">
-          <ul>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Services</a></li>
-            <li><a href="#">Projects</a></li>
-            <li><a href="#">Contact</a></li>
-          </ul>
-        </nav>
-        <div class="main-message-arrow">
-          <h1 class="center-main-message">We are creatives</h1>
-          <img src="images/icon-arrow-down.svg" alt="arrow-down" class="arrow-down">
-        </div>
-      </div>
+  <header class="header-content-box">
+    <div class="logo-top-left">
+      <img src="images/logo.svg" alt="sunnyside" class="logo-img">
     </div>
-    </header>
-<div class="brand-transform-text">
+
+    <nav class="navigation-place-right">
+      <ul>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Services</a></li>
+        <li><a href="#">Projects</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </nav>
+
+    <div class="main-message-arrow">
+      <h1 class="center-main-message">We are creatives</h1>
+    </div>
+
+    <div class="orange-arrow">
+      <img src="images/icon-arrow-down.svg" alt="arrow-down" class="arrow-down">
+    </div>
+  </header>
+
+  <div class="egg-picture">
+
+  </div>
+
+<section class="brand-transform-text">
   <div class="information-container-center">
     <h1 class="information-heading">
       Transform your brand
@@ -48,9 +58,13 @@
     </p>
     <p class="bold-learn-more"><a href="#">learn more</a></p>
   </div>
-</div>
-  
-<div class="stand-out-text">
+</section>
+
+  <div class="cup-picture">
+
+  </div>
+
+  <section class="stand-out-text">
   <div class="information-container-center">
     <h1 class="information-heading">
       Stand out to the right audience
@@ -60,9 +74,9 @@
     </p>
     <p class="bold-learn-more"><a href="#">learn more</a></p>
   </div>
-</div>
+</section>
 
-<div class="graphic-design-text-img">
+<section class="graphic-design-text-img">
   <div class="image-embedded-text">
     <h4 class="image-embedded-header">
       Graphic design
@@ -71,9 +85,9 @@
       Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.
     </p>
   </div>
-</div>
+</section>
 
-<div class="photograpy-text-img">
+<section class="photography-text-img">
   <div class="image-embedded-text">
     <h4 class="image-embedded-header">
       Photography
@@ -82,7 +96,7 @@
       Increase your credibility by getting the most stunning, high-quality photos that improve your business image.
     </p>
   </div>  
-</div>
+</section>
 
 <div class="wide-bottom-container">
   <div class="wide-center-inner">
@@ -91,7 +105,7 @@
     </h1>
       <div class="client">
         <img src="images/image-emily.jpg" alt="profile-picture-emily" class="profile-picture-client">
-        <p class="testimonial">We put our trust in Sunnyside and they delivered, making sure our needs were met and deadlines were always hit.</p>    
+        <p class="testimonial">We put our trust in Sunnyside, and they delivered, making sure our needs were met and deadlines were always hit.</p>
         <h3 class="name">Emily R.</h3>
         <h4 class="position-title">Marketing Director</h4>
       </div>
@@ -110,12 +124,19 @@
   </div>
 </div>
 
-<div class="photo-gallery-show-wide">
-<img src="images/desktop/image-gallery-milkbottles.jpg" alt="milkbottles" class="gallery">
-<img src="images/desktop/image-gallery-orange.jpg" alt="orange" class="gallery">
-<img src="images/desktop/image-gallery-cone.jpg" alt="cone" class="gallery">
-<img src="images/desktop/image-gallery-sugarcubes.jpg" alt="sugarcubes" class="gallery">
+<div class="photo-gallery-show-wide-desktop">
+  <img src="images/desktop/image-gallery-milkbottles.jpg" alt="milkbottles" class="gallery">
+  <img src="images/desktop/image-gallery-orange.jpg" alt="orange" class="gallery">
+  <img src="images/desktop/image-gallery-cone.jpg" alt="cone" class="gallery">
+  <img src="images/desktop/image-gallery-sugarcubes.jpg" alt="sugarcubes" class="gallery">
 </div>
+
+ <div class="photo-gallery-show-wide-mobile">
+   <img src="images/mobile/image-gallery-milkbottles.jpg" alt="milkbottles" class="gallery">
+   <img src="images/mobile/image-gallery-orange.jpg" alt="orange" class="gallery">
+   <img src="images/mobile/image-gallery-cone.jpg" alt="cone" class="gallery">
+   <img src="images/mobile/image-gallery-sugar-cubes.jpg" alt="sugarcubes" class="gallery">
+ </div>
 
   <footer>
     About
