added colour to fonts as specified in the style document

--- a/index.html
+++ b/index.html
@@ -78,10 +78,10 @@
 
 <section class="graphic-design-text-img">
   <div class="image-embedded-text">
-    <h4 class="image-embedded-header">
+    <h4 id="graphic-design" class="image-embedded-header">
       Graphic design
     </h4>
-    <p class="image-embedded-description">
+    <p id="graphic-design-description" class="image-embedded-description">
       Great design makes you memorable. We deliver artwork that underscores your brand message and captures potential clients’ attention.
     </p>
   </div>
@@ -89,10 +89,10 @@
 
 <section class="photography-text-img">
   <div class="image-embedded-text">
-    <h4 class="image-embedded-header">
+    <h4 id="photography" class="image-embedded-header">
       Photography
     </h4>
-    <p class="image-embedded-description">
+    <p id="photography-description" class="image-embedded-description">
       Increase your credibility by getting the most stunning, high-quality photos that improve your business image.
     </p>
   </div>
